--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Verificar IPs Repetidos</h1>
+    <h1>Verificar IPs Repetidos - Lukinhah</h1>
     <p>Cole os IPs no formato <code>IP:porta:senha:senha</code>, um por linha:</p>
     <textarea id="ipInput" placeholder="Exemplo:&#10;91.123.11.95:6361:senha:senha&#10;192.168.0.1:8080:user:pass"></textarea>
     <button onclick="checkDuplicates()">Verificar Repetidos</button>
